Admin only rights added to NewProductView

--- a/Grocery.App/Views/GroceryListsView.xaml
+++ b/Grocery.App/Views/GroceryListsView.xaml
@@ -9,6 +9,7 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="{Binding Client.Name}" Command="{Binding ShowBoughtProductsCommand}"/>
+        <ToolbarItem Text="Add products" Command="{Binding ShowNewProductCommand}"/>
     </ContentPage.ToolbarItems>
 
     <Shell.TitleView>
